--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-  "rewrites": [{"source": "/(.*)", "destination": "/"}]
+  "builds": [{
+    "src": "dist/main.js",
+    "use": "@vercel/node",
+    "config": {
+      "distDir": "dist"
+    }
+  }],
+  "routes": [{
+    "src": "/(.*)",
+    "dest": "/dist/main.js" 
+  }]
 }
